<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Отрасль" />

        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Браузер" />
        <item
            android:id="@+id/nav_task"
            android:title="Worker"/>

        <item
            android:id="@+id/nav_compass"
            android:title="Компас"/>

        <item
            android:id="@+id/nav_camera_note"
            android:title="Фото-заметка"/>

        <item
            android:id="@+id/nav_mic"
            android:title="Шумомер"/>

        <item
            android:id="@+id/nav_profile"
            android:title="Профиль"/>

        <item
            android:id="@+id/nav_file_lab"
            android:title="Файлы"/>

    </group>
</menu>